Set hover sonidos

--- a/newHTML/sot.html
+++ b/newHTML/sot.html
@@ -17,20 +17,20 @@ fluo.com.mx
 	<meta http-equiv="pragma" content="no-cache"/>
 	<meta name="google" content="notranslate"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0000, minimum-scale=1.0000, maximum-scale=1.0000, user-scalable=yes">
-  <title>Tlayolis | Yot Mx</title> <!-- REVISAR -->
+  <title>Sot | Yot Mx</title> <!-- REVISAR -->
   <link rel="canonical" href=" " /> <!-- FALTA -->
   <meta name="description" content=""/> <!-- FALTA -->
   <meta name="keywords" content=" "/> <!-- FALTA -->
   <meta name="author" content="www.fluo.com.mx">
-  <meta property="og:title" content="Tlayolis | Yot Mx"> <!-- REVISAR -->
-	<meta property="og:site_name" content="Tlayolis | Yot Mx"> <!-- REVISAR -->
+  <meta property="og:title" content="Sot | Yot Mx"> <!-- REVISAR -->
+	<meta property="og:site_name" content="Sot | Yot Mx"> <!-- REVISAR -->
 	<meta property="og:url" content=" "> <!-- FALTA -->
 	<meta property="og:type" content="website"> <!-- FALTA -->
 	<meta property="og:image" content="img/media.jpg"> <!-- FALTA -->
   <meta property="og:description" content=" "> <!-- FALTA -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:creator" content="@fluomx">
-	<meta name="twitter:title" content="Tlayolis | Yot Mx"> <!-- REVISAR -->
+	<meta name="twitter:title" content="Sot | Yot Mx"> <!-- REVISAR -->
 	<meta name="twitter:description" content=" "> <!-- FALTA -->
 	<meta name="twitter:image" content="img/media.jpg"> <!-- FALTA -->
   <link rel="apple-touch-icon" sizes="180x180" href="css/fav/apple-touch-icon.png">
@@ -105,19 +105,18 @@ fluo.com.mx
       <img onmouseover="changeIcon('over', 'menu/menu-', this)" onmouseout="changeIcon('out', 'menu/menu-', this)" src="img/menu/menu-out.svg" height="50">
     </a>
   </nav>
-  <div id="backgroundProducto" class="inicio">
+  <div id="backgroundProducto" class="inicioSot">
     <!-- <div id="papas" style="background-image:url('img/papas/tlayolis-jalapeno.png')"></div> -->
   </div>
   <section id="mainProducto">
     <article class="header showDisplayFlex">
       <header>
-        <img src="img/tlayolis/logotipo-tlayolis-2.svg" alt="Logotipo Tlayolis" width="320">
+        <img src="img/sot/logotipo-sot.svg" alt="Logotipo Tlayolis" width="320">
         <p>
-          Tlayolis es una deliciosa botana
-          de harina de maíz adicionada con
-          harina de papa con el tamaño y la
-          cantidad ideal para compartir con
-          tus amigos.
+          Sot es una deliciosa botana de harina
+          de maíz adicionada con harina de papa
+          con el tamaño y la cantidad ideal para
+          compartir con tus amigos.
         </p>
         <p>
           Una vez que las pruebes,
@@ -125,48 +124,48 @@ fluo.com.mx
         </p>
       </header>
     </article>
-    <!-- JALAPEÑO -->
+    <!-- CAMOTE -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this)">
-        <img src="img/bulletT1.svg" alt="">
-        <img id="mock" src="img/tlayolis/jalapeño.png" alt="">
+      <div class="producto" onmouseover="hoverProducto(this, 'sot')">
+        <img src="img/bulletS2.svg" alt="">
+        <img id="mock" src="img/sot/camote.png" alt="">
       </div>
       <div class="info">
-        <h2>Jalapeño</h2>
-        <p>El perfecto empujón para cambiar las perspectivas cotidianas</p>
-        <div style="background-image:url('img/tablas/tla-1.png');"></div>
+        <h2>Camote</h2>
+        <p>El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
+        <div style="background-image:url('img/tablas/sot-1.png');"></div>
         <ul id="interfaceInner">
           <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
           <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
         </ul>
       </div>
     </article>
-    <!-- HABANERO -->
+    <!-- YUCA -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this)">
-        <img src="img/bulletT2.svg" alt="">
-        <img id="mock" src="img/tlayolis/habanero.png" alt="">
+      <div class="producto" onmouseover="hoverProducto(this, 'sot')">
+        <img src="img/bulletS3.svg">
+        <img id="mock" src="img/sot/yuca.png" alt="">
       </div>
       <div class="info">
-        <h2>Habanero</h2>
-        <p>El mood ideal para salir de fiesta y conocer nuevos lugares, personas y experiencias.</p>
-        <div style="background-image:url('img/tablas/tla-2.png');"></div>
+        <h2>Yuca</h2>
+        <p>El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
+        <div style="background-image:url('img/tablas/sot-2.png');"></div>
         <ul id="interfaceInner">
           <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
           <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
         </ul>
       </div>
     </article>
-    <!-- BBQ -->
+    <!-- CAMOTE Y YUCA -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this)">
-        <img src="img/bulletT3.svg" alt="">
-        <img id="mock" src="img/tlayolis/bbq.png" alt="">
+      <div class="producto" onmouseover="hoverProducto(this, 'sot')">
+        <img src="img/bulletS1.svg" alt="">
+        <img id="mock" src="img/sot/camoteyuca.png" alt="">
       </div>
       <div class="info">
-        <h2>Barbecue</h2>
-        <p>Ideal para disfrutar una comida con amigos y personas cercanas.</p>
-        <div style="background-image:url('img/tablas/tla-3.png');"></div>
+        <h2>Camote y yuca</h2>
+        <p>El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
+        <div style="background-image:url('img/tablas/sot-3.png');"></div>
         <ul id="interfaceInner">
           <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
           <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
@@ -199,8 +198,14 @@ fluo.com.mx
   <audio id="hoverSound">
     <source src="assets/hover.mp3" type="audio/mpeg">
   </audio>
-  <audio id="hoverProducto">
+  <audio id="hoverProductoTlayolis">
     <source src="assets/hoverTlayolis.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="hoverProductoPotet">
+    <source src="assets/hoverPotet.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="hoverProductoSot">
+    <source src="assets/hoverSot.mp3" type="audio/mpeg">
   </audio>
   <script src="js/bowser.min.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
