--- a/newHTML/potet.html
+++ b/newHTML/potet.html
@@ -105,71 +105,70 @@ fluo.com.mx
       <img onmouseover="changeIcon('over', 'menu/menu-', this)" onmouseout="changeIcon('out', 'menu/menu-', this)" src="img/menu/menu-out.svg" height="50">
     </a>
   </nav>
-  <div id="backgroundProducto" class="inicio">
+  <div id="backgroundProducto" class="inicioPotet">
     <!-- <div id="papas" style="background-image:url('img/papas/tlayolis-jalapeno.png')"></div> -->
   </div>
   <section id="mainProducto">
     <article class="header showDisplayFlex">
       <header>
-        <img src="img/tlayolis/logotipo-tlayolis-2.svg" alt="Logotipo Tlayolis" width="320">
-        <p>
-          Tlayolis es una deliciosa botana
-          de harina de maíz adicionada con
-          harina de papa con el tamaño y la
-          cantidad ideal para compartir con
-          tus amigos.
+        <img src="img/potet/logotipo-potet.svg" alt="Logotipo Tlayolis" width="320">
+        <p style="color:#000;">
+          Potet es una deliciosa botana de harina
+          de maíz adicionada con harina de papa
+          con el tamaño y la cantidad ideal para
+          compartir con tus amigos.
         </p>
-        <p>
+        <p style="color:#000;">
           Una vez que las pruebes,
           ¡Serán parte de todas tus reuniones!
         </p>
       </header>
     </article>
-    <!-- JALAPEÑO -->
+    <!-- SAL DE MAR -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this)">
-        <img src="img/bulletT1.svg" alt="">
-        <img id="mock" src="img/tlayolis/jalapeño.png" alt="">
+      <div class="producto" onmouseover="hoverProducto(this, 'potet')">
+        <img src="img/bulletP1.svg" alt="">
+        <img id="mock" src="img/potet/saldemar.png" alt="">
       </div>
       <div class="info">
-        <h2>Jalapeño</h2>
-        <p>El perfecto empujón para cambiar las perspectivas cotidianas</p>
-        <div style="background-image:url('img/tablas/tla-1.png');"></div>
+        <h2 style="color:#000;">Sal de mar</h2>
+        <p style="color:#000;">El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias</p>
+        <div style="background-image:url('img/tablas/pot-1.png');"></div>
         <ul id="interfaceInner">
-          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
-          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
         </ul>
       </div>
     </article>
     <!-- HABANERO -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this)">
-        <img src="img/bulletT2.svg" alt="">
-        <img id="mock" src="img/tlayolis/habanero.png" alt="">
+      <div class="producto" onmouseover="hoverProducto(this, 'potet')">
+        <img src="img/bulletP2.svg" alt="">
+        <img id="mock" src="img/potet/habanero.png" alt="">
       </div>
       <div class="info">
-        <h2>Habanero</h2>
-        <p>El mood ideal para salir de fiesta y conocer nuevos lugares, personas y experiencias.</p>
-        <div style="background-image:url('img/tablas/tla-2.png');"></div>
+        <h2 style="color:#000;">Habanero</h2>
+        <p style="color:#000;">El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
+        <div style="background-image:url('img/tablas/pot-2.png');"></div>
         <ul id="interfaceInner">
-          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
-          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
         </ul>
       </div>
     </article>
     <!-- BBQ -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this)">
-        <img src="img/bulletT3.svg" alt="">
-        <img id="mock" src="img/tlayolis/bbq.png" alt="">
+      <div class="producto" onmouseover="hoverProducto(this, 'potet')">
+        <img src="img/bulletP3.svg" alt="">
+        <img id="mock" src="img/potet/chilearbol.png" alt="">
       </div>
       <div class="info">
-        <h2>Barbecue</h2>
-        <p>Ideal para disfrutar una comida con amigos y personas cercanas.</p>
-        <div style="background-image:url('img/tablas/tla-3.png');"></div>
+        <h2 style="color:#000;">Chile de árbol</h2>
+        <p style="color:#000;">El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
+        <div style="background-image:url('img/tablas/pot-3.png');"></div>
         <ul id="interfaceInner">
-          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
-          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
         </ul>
       </div>
     </article>
@@ -199,8 +198,14 @@ fluo.com.mx
   <audio id="hoverSound">
     <source src="assets/hover.mp3" type="audio/mpeg">
   </audio>
-  <audio id="hoverProducto">
+  <audio id="hoverProductoTlayolis">
     <source src="assets/hoverTlayolis.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="hoverProductoPotet">
+    <source src="assets/hoverPotet.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="hoverProductoSot">
+    <source src="assets/hoverSot.mp3" type="audio/mpeg">
   </audio>
   <script src="js/bowser.min.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
