--- a/newHTML/section-tlayolis.html
+++ b/newHTML/section-tlayolis.html
@@ -77,9 +77,9 @@ fluo.com.mx
       </a>
       <span>
         <li><a href="nosotros.html"> <img onmouseover="changeIcon('over', 'menu/nosotros-', this)" onmouseout="changeIcon('out', 'menu/nosotros-', this)" src="img/menu/nosotros-out.svg" title="Ir a Nosotros" alt="Nosotros" height="30"> </a></li>
-        <li><a href="sot.html"> <img onmouseover="changeIcon('over', 'menu/sot-', this)" onmouseout="changeIcon('out', 'menu/sot-', this)" src="img/menu/sot-out.svg" title="Ir a Sot" alt="Sot" height="30"> </a></li>
-        <li><a href="potet.html"> <img onmouseover="changeIcon('over', 'menu/potet-', this)" onmouseout="changeIcon('out', 'menu/potet-', this)" src="img/menu/potet-out.svg" title="Ir a Potet" alt="Potet" height="30"> </a></li>
-        <li><a href="tlayolis.html"> <img onmouseover="changeIcon('over', 'menu/tlayolis-', this)" onmouseout="changeIcon('out', 'menu/tlayolis-', this)" src="img/menu/tlayolis-out.svg" title="Ir a Tlayolis" alt="Tlayolis" height="30"> </a></li>
+        <li><a href="section-sot.html"> <img onmouseover="changeIcon('over', 'menu/sot-', this)" onmouseout="changeIcon('out', 'menu/sot-', this)" src="img/menu/sot-out.svg" title="Ir a Sot" alt="Sot" height="30"> </a></li>
+        <li><a href="section-potet.html"> <img onmouseover="changeIcon('over', 'menu/potet-', this)" onmouseout="changeIcon('out', 'menu/potet-', this)" src="img/menu/potet-out.svg" title="Ir a Potet" alt="Potet" height="30"> </a></li>
+        <li><a href="section-tlayolis.html"> <img onmouseover="changeIcon('over', 'menu/tlayolis-', this)" onmouseout="changeIcon('out', 'menu/tlayolis-', this)" src="img/menu/tlayolis-out.svg" title="Ir a Tlayolis" alt="Tlayolis" height="30"> </a></li>
         <li class="last">
           <a role="button" class="phonePop" > <img onmouseover="changeIcon('over', 'menu/tel-', this)" onmouseout="changeIcon('out', 'menu/tel-', this)" src="img/menu/tel-out.svg" title="5567303009" alt="Teléfono Yot Mx" height="35"> </a>
           <a href="mailto:info@yot.com.mx"> <img onmouseover="changeIcon('over', 'menu/mail-', this)" onmouseout="changeIcon('out', 'menu/mail-', this)" src="img/menu/mail-out.svg" title="info@yot.com.mx" alt="Correo Yot Mx" height="35"> </a>
@@ -90,9 +90,9 @@ fluo.com.mx
     </ul>
     <ul class="outerDesktop desktop">
       <li><a href="nosotros.html"> <img onmouseover="changeIcon('over', 'menu/nosotros-', this)" onmouseout="changeIcon('out', 'menu/nosotros-', this)" src="img/menu/nosotros-out.svg" title="Ir a Nosotros" alt="Nosotros" height="30"> </a></li>
-      <li><a href="sot.html"> <img onmouseover="changeIcon('over', 'menu/sot-', this)" onmouseout="changeIcon('out', 'menu/sot-', this)" src="img/menu/sot-out.svg" title="Ir a Sot" alt="Sot" height="30"> </a></li>
-      <li><a href="potet.html"> <img onmouseover="changeIcon('over', 'menu/potet-', this)" onmouseout="changeIcon('out', 'menu/potet-', this)" src="img/menu/potet-out.svg" title="Ir a Potet" alt="Potet" height="30"> </a></li>
-      <li><a href="tlayolis.html"> <img onmouseover="changeIcon('over', 'menu/tlayolis-', this)" onmouseout="changeIcon('out', 'menu/tlayolis-', this)" src="img/menu/tlayolis-out.svg" title="Ir a Tlayolis" alt="Tlayolis" height="30"> </a></li>
+      <li><a href="section-sot.html"> <img onmouseover="changeIcon('over', 'menu/sot-', this)" onmouseout="changeIcon('out', 'menu/sot-', this)" src="img/menu/sot-out.svg" title="Ir a Sot" alt="Sot" height="30"> </a></li>
+      <li><a href="section-potet.html"> <img onmouseover="changeIcon('over', 'menu/potet-', this)" onmouseout="changeIcon('out', 'menu/potet-', this)" src="img/menu/potet-out.svg" title="Ir a Potet" alt="Potet" height="30"> </a></li>
+      <li><a href="section-tlayolis.html"> <img onmouseover="changeIcon('over', 'menu/tlayolis-', this)" onmouseout="changeIcon('out', 'menu/tlayolis-', this)" src="img/menu/tlayolis-out.svg" title="Ir a Tlayolis" alt="Tlayolis" height="30"> </a></li>
     </ul>
     <ul class="outerRedes desktop">
       <li><a role="button" class="phonePop" > <img onmouseover="changeIcon('over', 'menu/tel-', this)" onmouseout="changeIcon('out', 'menu/tel-', this)" src="img/menu/tel-out.svg" title="5567303009" alt="Teléfono Yot Mx" height="30"> </a></li>
@@ -105,70 +105,71 @@ fluo.com.mx
       <img onmouseover="changeIcon('over', 'menu/menu-', this)" onmouseout="changeIcon('out', 'menu/menu-', this)" src="img/menu/menu-out.svg" height="50">
     </a>
   </nav>
-  <div id="backgroundProducto" class="inicioPotet">
+  <div id="backgroundProducto" class="inicioTlayolis">
     <!-- <div id="papas" style="background-image:url('img/papas/tlayolis-jalapeno.png')"></div> -->
   </div>
   <section id="mainProducto">
     <article class="header showDisplayFlex">
       <header>
-        <img src="img/potet/logotipo-potet.svg" alt="Logotipo Tlayolis" width="320">
-        <p style="color:#000;">
-          Potet es una deliciosa botana de harina
-          de maíz adicionada con harina de papa
-          con el tamaño y la cantidad ideal para
-          compartir con tus amigos.
+        <img src="img/tlayolis/logotipo-tlayolis-2.svg" alt="Logotipo Tlayolis" width="320">
+        <p>
+          Tlayolis es una deliciosa botana
+          de harina de maíz adicionada con
+          harina de papa con el tamaño y la
+          cantidad ideal para compartir con
+          tus amigos.
         </p>
-        <p style="color:#000;">
+        <p>
           Una vez que las pruebes,
           ¡Serán parte de todas tus reuniones!
         </p>
       </header>
     </article>
-    <!-- SAL DE MAR -->
+    <!-- JALAPEÑO -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this, 'potet')">
-        <img src="img/bulletP1.svg" alt="">
-        <img id="mock" src="img/potet/saldemar.png" alt="">
+      <div class="producto" onmouseover="hoverProducto(this, 'tlayolis')">
+        <img src="img/bulletT1.svg" alt="">
+        <img id="mock" src="img/tlayolis/jalapeño.png" alt="">
       </div>
       <div class="info">
-        <h2 style="color:#000;">Sal de mar</h2>
-        <p style="color:#000;">El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias</p>
-        <div style="background-image:url('img/tablas/pot-1.png');"></div>
+        <h2>Jalapeño</h2>
+        <p>El perfecto empujón para cambiar las perspectivas cotidianas</p>
+        <div style="background-image:url('img/tablas/tla-1.png');"></div>
         <ul id="interfaceInner">
-          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
-          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
         </ul>
       </div>
     </article>
     <!-- HABANERO -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this, 'potet')">
-        <img src="img/bulletP2.svg" alt="">
-        <img id="mock" src="img/potet/habanero.png" alt="">
+      <div class="producto" onmouseover="hoverProducto(this, 'tlayolis')">
+        <img src="img/bulletT2.svg" alt="">
+        <img id="mock" src="img/tlayolis/habanero.png" alt="">
       </div>
       <div class="info">
-        <h2 style="color:#000;">Habanero</h2>
-        <p style="color:#000;">El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
-        <div style="background-image:url('img/tablas/pot-2.png');"></div>
+        <h2>Habanero</h2>
+        <p>El mood ideal para salir de fiesta y conocer nuevos lugares, personas y experiencias.</p>
+        <div style="background-image:url('img/tablas/tla-2.png');"></div>
         <ul id="interfaceInner">
-          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
-          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
         </ul>
       </div>
     </article>
     <!-- BBQ -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this, 'potet')">
-        <img src="img/bulletP3.svg" alt="">
-        <img id="mock" src="img/potet/chilearbol.png" alt="">
+      <div class="producto" onmouseover="hoverProducto(this, 'tlayolis')">
+        <img src="img/bulletT3.svg" alt="">
+        <img id="mock" src="img/tlayolis/bbq.png" alt="">
       </div>
       <div class="info">
-        <h2 style="color:#000;">Chile de árbol</h2>
-        <p style="color:#000;">El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
-        <div style="background-image:url('img/tablas/pot-3.png');"></div>
+        <h2>Barbecue</h2>
+        <p>Ideal para disfrutar una comida con amigos y personas cercanas.</p>
+        <div style="background-image:url('img/tablas/tla-3.png');"></div>
         <ul id="interfaceInner">
-          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
-          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
+          <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
         </ul>
       </div>
     </article>
